# neo

./: .gitignore  00_need_to_prd.md  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  NEXT_STEP.md  README.md  STATE.md  flake.nix  prd.md  ralph.sh
assets/: neo_mascot.txt
assets/templates/: cabal.project.j2  flake.nix.j2  project.cabal.j2
src/: app.rs  cli.rs  config.rs  errors.rs  git.rs  lock.rs  main.rs  network.rs  output.rs  prereqs.rs  test_utils.rs  theme.rs
src/commands/: build.rs  lock.rs  mod.rs  new.rs  run.rs  test.rs  watch_common.rs
src/reconcile/: cabal.rs  cabal_project.rs  flake.rs  mod.rs  modules.rs  resolve.rs
src/subprocess/: ghci.rs  hurl.rs  mod.rs  nix.rs
src/tui/: banner.rs  confirm.rs  error_display.rs  footer.rs  mascot.rs  mod.rs  progress.rs  prompt.rs  selection.rs  spinner.rs  success.rs  watch.rs
tests/: integration_tests.rs
